--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="#">Chamber</a></li>
-          <li><a href="#">GitHub Profile</a></li>
-          <li><a href="#">LinkedIn</a></li>
+          <li><a href="https://github.com/pablo596">GitHub Profile</a></li>
+          <li><a href="https://www.linkedin.com/in/paedpaal/">LinkedIn</a></li>
         </ul>
       </nav>
     </header>
