--- a/index.html
+++ b/index.html
@@ -48,8 +48,19 @@
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="#">Chamber</a></li>
-          <li><a href="https://github.com/pablo596">GitHub Profile</a></li>
-          <li><a href="https://www.linkedin.com/in/paedpaal/">LinkedIn</a></li>
+          <li>
+            <a href="https://github.com/pablo596" target="_blank"
+              >GitHub Profile</a
+            >
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/paedpaal/" target="_blank"
+              >LinkedIn</a
+            >
+          </li>
+          <li>
+            <a href="https://paedpaal.dev" target="_blank">Personal Page</a>
+          </li>
         </ul>
       </nav>
     </header>
