--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,10 +8,10 @@
       name="description"
       content="Directory of Chamber of Commerce members. Connect with local businesses and discover opportunities."
     >
-    <meta name="author" content="Pablo Palacios" >
+    <meta name="author" content="Pablo Eduardo Palacios Alava" >
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/favicon.icon" type="image/x-icon" >
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" >
 
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="styles/normalize.css" >
@@ -26,10 +26,10 @@
       content="Chamber of Commerce - Member Directory"
     >
     <meta property="og:type" content="website" >
-    <meta property="og:image" content="images/og-image.jpg" >
+    <meta property="og:image" content="images/chamberOfCommerce.png" >
     <meta
       property="og:url"
-      content="https://pablo596.github.io/chamber/directory.html"
+      content="https://pablo596.github.io/wdd231/chamber/directory.html"
     >
   </head>
   <body>
