--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Directory - Chamber of Commerce</title>
     <meta
@@ -26,7 +26,8 @@
       content="Chamber of Commerce - Member Directory"
     >
     <meta property="og:type" content="website" >
-    <meta property="og:image" content="images/chamberOfCommerce.png" >
+    <meta property="og:image" content="https://pablo596.github.io/wdd231/chamber/images/chamberOfCommerce.png">
+
     <meta
       property="og:url"
       content="https://pablo596.github.io/wdd231/chamber/directory.html"
@@ -36,7 +37,7 @@
     <!-- Header -->
     <header>
       <div class="container">
-        <h1>Chamber of Commerce</h1>
+        <h1>Directory - Chamber of Commerce</h1>
         <button class="hamburger" id="hamburger">&#9776;</button>
         <nav id="navMenu">
           <ul>
@@ -51,6 +52,7 @@
 
     <!-- Main Content -->
     <main>
+      <h1></h1>
       <div class="container">
         <h2>Member Directory</h2>
         <div class="view-toggle">
