--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Directory - Chamber of Commerce</title>
     <meta
@@ -26,7 +26,10 @@
       content="Chamber of Commerce - Member Directory"
     >
     <meta property="og:type" content="website" >
-    <meta property="og:image" content="https://pablo596.github.io/wdd231/chamber/images/chamberOfCommerce.png">
+    <meta
+      property="og:image"
+      content="https://pablo596.github.io/wdd231/chamber/images/chamberOfCommerce.png"
+    >
 
     <meta
       property="og:url"
@@ -52,9 +55,8 @@
 
     <!-- Main Content -->
     <main>
-      <h1></h1>
+      <h1>Member Directory</h1>
       <div class="container">
-        <h2>Member Directory</h2>
         <div class="view-toggle">
           <button id="gridView">Grid View</button>
           <button id="listView">List View</button>
