--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -40,7 +40,7 @@
     <!-- Header -->
     <header>
       <div class="container">
-        <h1>Directory - Chamber of Commerce</h1>
+        <h1>Chamber of Commerce</h1>
         <button class="hamburger" id="hamburger">&#9776;</button>
         <nav id="navMenu">
           <ul>
@@ -55,7 +55,7 @@
 
     <!-- Main Content -->
     <main>
-      <h1>Member Directory</h1>
+      <h1>Directory - Chamber of Commerce</h1>
       <div class="container">
         <div class="view-toggle">
           <button id="gridView">Grid View</button>
