--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="description" content="WDD 231 Course Home Page" >
-    <meta name="author" content="Pablo E. Palacios" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta name="description" content="WDD 231 Course Home Page" />
+    <meta name="author" content="Pablo E. Palacios" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WDD 231 | Home</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="styles/normalize.css" >
-    <link rel="stylesheet" href="styles/small.css" >
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/small.css" />
     <link
       rel="stylesheet"
       href="styles/large.css"
       media="screen and (min-width: 600px)"
-    >
+    />
 
     <!-- Google Fonts (example) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
-    >
+    />
 
     <!-- JavaScript with defer -->
     <script src="scripts/date.js" defer></script>
@@ -36,7 +36,7 @@
           src="images/profile-photo.jpg"
           alt="Profile Photo"
           class="profile-pic"
-        >
+        />
         <span class="my-name">Pablo E. Palacios</span>
         <!-- Hamburger menu button for small screens -->
         <button id="menuBtn" class="menu-button" aria-label="Navigation Menu">
@@ -47,7 +47,7 @@
       <nav id="primaryNav" class="nav-closed">
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="/chamber/">Chamber</a></li>
+          <li><a href="/wdd231/chamber/">Chamber</a></li>
           <li>
             <a href="https://github.com/pablo596" target="_blank"
               >GitHub Profile</a
@@ -83,7 +83,7 @@
             src="images/sample-image.jpg"
             alt="Portoviejo, Manabi, Ecuador"
             class="responsive-image"
-          >
+          />
           <figcaption>Portoviejo, Manabi, Ecuador</figcaption>
         </figure>
       </section>
