--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join Chamber</title>
+    <title>Chamber of Commerce Join Page</title>
     <meta
       name="description"
       content="Apply for membership in our Chamber of Commerce."
@@ -14,6 +14,14 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/responsive.css">
+    <!-- Open Graph (Optional) -->
+    <meta property="og:title" content="Chamber of Commerce - Home">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="images/hero-image.jpg">
+    <meta
+      property="og:url"
+      content="https://YOUR_GITHUB_USERNAME.github.io/wdd231/chamber/index.html"
+   >
   </head>
   <body>
     <header>
@@ -32,7 +40,7 @@
     </header>
 
     <main>
-      <h1>Join the Chamber</h1>
+      <h1>Chamber of Commerce Join Page</h1>
       <form action="thankyou.html" method="get" class="join-form-container">
         <div class="form-grid">
           <label>
