--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -14,6 +14,14 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.min.css">
     <link rel="stylesheet" href="styles/responsive.css">
+    <!-- Open Graph (Optional) -->
+    <meta property="og:title" content="Chamber of Commerce - Home">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="images/hero-image.jpg">
+    <meta
+      property="og:url"
+      content="https://YOUR_GITHUB_USERNAME.github.io/wdd231/chamber/index.html"
+   >
   </head>
   <body>
     <header>
