--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -2,26 +2,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thank You</title>
     <meta
       name="description"
       content="Confirmation page for Chamber of Commerce membership."
-   >
-    <meta name="author" content="Pablo Eduardo Palacios Alava">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/styles.min.css">
-    <link rel="stylesheet" href="styles/responsive.css">
+    />
+    <meta name="author" content="Pablo Eduardo Palacios Alava" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/styles.min.css" />
+    <link rel="stylesheet" href="styles/responsive.css" />
     <!-- Open Graph (Optional) -->
-    <meta property="og:title" content="Chamber of Commerce - Home">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="images/hero-image.jpg">
+    <meta property="og:title" content="Chamber of Commerce - Home" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/hero-image.jpg" />
     <meta
       property="og:url"
       content="https://YOUR_GITHUB_USERNAME.github.io/wdd231/chamber/index.html"
-   >
+    />
   </head>
   <body>
     <header>
