--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -2,39 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Directory - Chamber of Commerce</title>
     <meta
       name="description"
       content="Directory of Chamber of Commerce members. Connect with local businesses and discover opportunities."
-    >
-    <meta name="author" content="Pablo Eduardo Palacios Alava" >
+   >
+    <meta name="author" content="Pablo Eduardo Palacios Alava">
 
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" >
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Normalize CSS -->
-    <link rel="stylesheet" href="styles/normalize.css" >
+    <link rel="stylesheet" href="styles/normalize.css">
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="styles/styles.css" >
+    <link rel="stylesheet" href="styles/styles.css">
     <!-- Responsive Styles -->
-    <link rel="stylesheet" href="styles/responsive.css" >
+    <link rel="stylesheet" href="styles/responsive.css">
 
     <!-- Facebook Open Graph Meta Tags -->
     <meta
       property="og:title"
       content="Chamber of Commerce - Member Directory"
-    >
-    <meta property="og:type" content="website" >
+   >
+    <meta property="og:type" content="website">
     <meta
       property="og:image"
       content="https://pablo596.github.io/wdd231/chamber/images/chamberOfCommerce.png"
-    >
+   >
 
     <meta
       property="og:url"
       content="https://pablo596.github.io/wdd231/chamber/directory.html"
-    >
+   >
   </head>
   <body>
     <!-- Header -->
@@ -83,5 +83,6 @@
 
     <!-- Scripts -->
     <script src="scripts/main.js" defer></script>
+    <script src="scripts/directory.js" defer></script>
   </body>
 </html>
