--- a/chamber/index.html
+++ b/chamber/index.html
@@ -119,6 +119,7 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="scripts/main.js" defer></script>
     <script src="scripts/home.js" defer></script>
   </body>
 </html>
