--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,19 +1,23 @@
-<!-- thankyou.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank You</title>
+    <title>Chamber of Commerce - Home</title>
     <meta
       name="description"
-      content="Confirmation page for Chamber of Commerce membership."
+      content="Chamber of Commerce Home Page. Connect and support local businesses."
    >
     <meta name="author" content="Pablo Eduardo Palacios Alava">
+
+    <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.min.css">
     <link rel="stylesheet" href="styles/responsive.css">
+
     <!-- Open Graph (Optional) -->
     <meta property="og:title" content="Chamber of Commerce - Home">
     <meta property="og:type" content="website">
@@ -23,7 +27,9 @@
       content="https://YOUR_GITHUB_USERNAME.github.io/wdd231/chamber/index.html"
    >
   </head>
+
   <body>
+    <!-- Header -->
     <header>
       <div class="container">
         <h1>Chamber of Commerce</h1>
@@ -31,34 +37,34 @@
         <nav id="navMenu">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="discover.html">Discover</a></li>
+            <li><a href="discover.html" class="active">Discover</a></li>
             <li><a href="directory.html">Directory</a></li>
-            <li><a href="join.html" class="active">Join</a></li>
+            <li><a href="join.html">Join</a></li>
           </ul>
         </nav>
       </div>
     </header>
 
-    <main class="thank-you container">
-      <h2>Thank You for Joining!</h2>
-      <p>
-        We’ve received your application. Below is the information you submitted:
-      </p>
+    <!-- Main Content -->
+    <main class="discover-main container">
+      <h1>Discover Ecuador</h1>
 
-      <div class="info-box">
-        <ul>
-          <li><strong>First Name:</strong> <span id="firstName"></span></li>
-          <li><strong>Last Name:</strong> <span id="lastName"></span></li>
-          <li><strong>Email:</strong> <span id="email"></span></li>
-          <li><strong>Phone:</strong> <span id="phone"></span></li>
-          <li>
-            <strong>Organization:</strong> <span id="organization"></span>
-          </li>
-          <li><strong>Submitted On:</strong> <span id="timestamp"></span></li>
-        </ul>
-      </div>
+      <!-- Section to display a visit message based on last visit using localStorage -->
+      <section class="visit-message" id="visitMessage" aria-live="polite">
+        <h2 class="visually-hidden">Visitor Message</h2>
+        <!-- Message will be injected by JavaScript -->
+      </section>
+      
+
+      <!-- Gallery section where tourist location cards will be inserted dynamically -->
+      <section class="discover-gallery" id="discoverGallery">
+        <h2 class="visually-hidden">Tourist Locations</h2>
+        <!-- Cards will be rendered here using data from discover.json -->
+      </section>
+      
     </main>
 
+    <!-- Footer -->
     <footer>
       <div class="container">
         <p>
@@ -71,6 +77,8 @@
       </div>
     </footer>
 
-    <script src="scripts/form.js" defer></script>
+    <!-- Scripts -->
+    <script src="scripts/main.js" defer></script>
+    <script src="scripts/discover.js" defer></script>
   </body>
 </html>
