--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber of Commerce - Home</title>
+    <title>Discover Ecuador</title>
     <meta
       name="description"
       content="Chamber of Commerce Home Page. Connect and support local businesses."
