--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discover Ecuador</title>
+    <title>Chamber of Commerce Discover Page</title>
     <meta
       name="description"
       content="Chamber of Commerce Home Page. Connect and support local businesses."
@@ -32,7 +32,7 @@
     <!-- Header -->
     <header>
       <div class="container">
-        <h1>Chamber of Commerce</h1>
+        <h1>Chamber of Commerce Discover Page</h1>
         <button class="hamburger" id="hamburger">&#9776;</button>
         <nav id="navMenu">
           <ul>
